# aipi-eyes-s1-jellyfin-demo

./: .gitignore  .gitmodules  README.md
AiPi-Eyes-jellyfin/: .gitignore  8388_pcm.c  CMakeLists.txt  jellyfin.cmake  main.c  music_mp3.curl  ui.c  ui.h  wifi-password.conf.example
AiPi-Eyes-jellyfin/demos/240X320_ui/: CMakeLists.txt
AiPi-Eyes-jellyfin/demos/240X320_ui/custom/: custom.c  custom.h  https_client.c  https_client.h
AiPi-Eyes-jellyfin/demos/240X320_ui/ui/: quicklogin.c
dma_test/: CMakeLists.txt  FreeRTOSConfig.h  jellyfin.cmake  lwipopts_user.h  main.c  music_mp3.curl  wifi-password.conf
music_test/: .gitignore  dowmload.sh  process.sh  test.py
